# A-MAZE-ING

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  main.py  maze.txt  maze_logic.py  mazegen-1.0.0-py3-none-any.whl  models.py  output.txt  pyproject.toml
mazegen/: a_maze_ing.py  maze_logic.py  models.py
