[project]
name = "mazegen"
version = "1.0.0"
description = "maze generator built with curses"
authors = [
    { name = "Oussama Chouira", email = "ouchouir@example.com" },
    { name = "Reda Elouanass", email = "rel-ouan@example.com" }
]
packages = [{include = "mazegen"}]
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
