[tool.poetry]
name = "mazegen"
version = "1.0.0"
description = "maze generator built with curses"
authors = ["Oussama Chouira", "Reda Elouanass"]
readme = "README.md"
packages = [{include = "mazegen"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
